ref(camera): camera frontend V1 done

--- a/src/main/resources/templates/observatory/camera.html
+++ b/src/main/resources/templates/observatory/camera.html
@@ -12,6 +12,7 @@
     <title>Camera</title>
 </head>
 
+<!-- TODO : Add action buttons-->
 <body style="padding-top: 60px">
     <nav class="navbar fixed-top bg-primary flex-md-nowrap p-0 shadow">
         <div class="container-fluid">
@@ -86,7 +87,159 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Camera control -->
             <div class="col mx-auto" sec:authorize="hasRole('ADVANCED_USER')">
+
+                <div class="card text-bg-primary" style="max-width: 32rem; min-width: 15rem" id="cameraCard">
+                    <div class="card-header"><h5 class="card-title">Camera</h5></div>
+                    <div class="card-body text-bg-light">
+                        
+                        <div class="d-flex justify-content-center">
+                            <button type="button" class="btn btn-primary col-5" id="caConnect">Connect</button>
+                        </div>
+
+                        <!-- Subframe -->
+                        <h5 class="text-primary-emphasis">Subframe</h5>
+                        
+                        <div class="row input-group">
+                            <div class="d-flex">
+                                <span class="input-group-text">X</span>
+                                <input type="number" class="form-control" id="caSubframeStartX" min="0" max="10000" value="0">
+                                <span class="input-group-text">Y</span>
+                                <input type="number" class="form-control" id="caSubframeStartY" min="0" max="10000" value="0">
+                                <span class="input-group-text">W</span>
+                                <input type="number" class="form-control" id="caSubframeWidth" min="0" max="10000" value="0">
+                                <span class="input-group-text">H</span>
+                                <input type="number" class="form-control" id="caSubframeHeight" min="0" max="10000" value="0">
+                                <button type="button" class="btn btn-primary" id="caSubframeButton" disabled>Set</button>
+                            </div>
+                        </div>
+                            
+                        <!-- Binning -->
+                        <h5 class="text-primary-emphasis mt-2">Binning</h5>
+
+                        <div class="row flex-nowrap input-group justify-content-between align-items-center">
+                            <div class="col-5 d-flex">
+                                <select title="lorem" class="form-select text-bg-primary" id="caBinningX">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <span class="input-group-text" id="caBinningTxt">X</span>
+                                <select title="ipsum" class="form-select text-bg-primary" id="caBinningY">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                            </div>
+
+
+                            <div class="col">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="caBinningSym">
+                                    <label class="form-check-label" for="caBinningSym">Symmetric</label>
+                                </div>
+                            </div>
+
+                            <div class="col-3">
+                                <button type="button" class="btn btn-primary w-100" id="caBinningSet" disabled>Set</button>
+                            </div>
+                        </div>
+
+                        <!-- Exposure -->
+                        <h5 class="text-primary-emphasis mt-2">Exposure</h5>
+                        
+                        <div class="row flex-nowrap input-group justify-content-between align-items-center">
+                            <div class="col-8 d-flex">
+                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="23" id="caExposureHrs">
+                                <span class="input-group-text">H</span>
+                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="59" id="caExposureMins">
+                                <span class="input-group-text">M</span>
+                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="59" id="caExposureSecs">
+                                <span class="input-group-text">S</span>
+                            </div>
+                            <div class="col">
+                                <div class="form-check form-switch">
+                                    <input class="form-check-input" type="checkbox" role="switch" id="caExposureLight" checked>
+                                    <label class="form-check-label" for="caExposureLight">Lightframe</label>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="btn-group col-12 my-1" role="group" id="caExposureBtns">
+                            <button type="button" class="btn btn-primary" id="caExposureStart" disabled>Start selection</button>
+                            <button type="button" class="btn btn-primary" id="caExposureStop" disabled>Stop</button>
+                            <button type="button" class="btn btn-danger" id="caExposureAbort" disabled>Abort</button>
+                        </div>
+
+                        <div class="w-100 d-flex justify-content-center my-1" id="caExposureDLBtns">
+                            <div class="btn-group col-8 my-1" role="group">
+                                <button type="button" class="btn btn-primary" id="caImgSave" disabled>Save</button>
+                                <button type="button" class="btn btn-primary" id="caImgDump" disabled>Dump</button>
+                            </div>
+                        </div>
+                        
+                        
+
+
+
+
+
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Cooler control -->
+            <div class="col mx-auto" sec:authorize="hasRole('ADVANCED_USER')">
+
+                <div class="card text-bg-primary" style="max-width: 32rem; min-width: 15rem" id="coolerCard">
+                    <div class="card-header"><h5 class="card-title">Cooler</h5></div>
+                    <div class="card-body text-bg-light">
+                        
+                        <!-- Powering up/down controls -->
+                        <div class="row flex-nowrap justify-content-between">
+                            <div class="col-4">
+                                <button type="button" class="btn btn-primary w-100 text-nowrap" id="caCoolerEnable" disabled>Turn on</button>
+                            </div>
+                            <div class="d-flex flex-row justify-content-between col-4">
+                                <span class="form-control" id="caCoolerPwr">???</span>
+                                <span class="input-group-text" id="caCoolerPwrPct">%</span>
+                            </div>
+                            <div class="col-4">
+                                <button type="button" class="btn btn-primary w-100 text-nowrap" id="caCoolerWarmup" disabled>Warmup</button>
+                            </div>
+                        </div>
+                        
+                        <!-- Current state display -->
+                        <div class="row flex-nowrap justify-content-between my-1">
+                            <div class="d-flex justify-content-center text-center">
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateOff">Off</div>
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateWup">Warmup</div>
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateStb">Stable</div>
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateAct">Active</div>
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateCdn">Cooldown</div>
+                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateSat">Saturated</div>
+                            </div>
+                        </div>
+
+                        <!-- Cooler temp settings -->
+                        <div class="row flex-nowrap justify-content-between my-1" id="caCoolerTempSetPane">           
+                                <div class="col-8">
+                                    <label for="caCoolerTarget" class="form-label">Set target temp</label>
+                                    <input type="range" class="form-range" min="-30.0" max="30.0" step="0.5" value="0" id="caCoolerTarget">
+                                </div>
+                                <div class="d-flex flex-row justify-content-between align-items-center col-4">
+                                    <button type="button" class="btn btn-primary col-5 text-nowrap" id="caCoolerTargetSet" disabled>Set</button>
+                                    <button type="button" class="btn btn-primary col-5 text-nowrap" id="caCoolerTargetEase" disabled>Ease</button>
+                                </div> 
+                        </div>
+                    </div>
+                </div>
+                
                 
 
 
