feat(camera): Finished main camera feature

--- a/src/main/resources/templates/observatory/dashboard.html
+++ b/src/main/resources/templates/observatory/dashboard.html
@@ -155,7 +155,7 @@
             </div>
             <div class="col mx-auto">
                 <div class="card h-100 text-bg-primary" style="max-width: 32rem; min-width: 15rem">
-                    <div class="card-header"><h5 class="card-title">Status</h5></div>
+                    <div class="card-header"><h5 class="card-title">Camera</h5></div>
                     <div class="card-body text-bg-light">
                         <div class="row flex-nowrap">
                             <div class="col-auto">
