--- a/src/main/resources/templates/observatory/camera.html
+++ b/src/main/resources/templates/observatory/camera.html
@@ -127,8 +127,8 @@
                                     <option value="3">3</option>
                                     <option value="4">4</option>
                                 </select>
-                                <span class="input-group-text" id="caBinningTxt">X</span>
-                                <select title="ipsum" class="form-select text-bg-primary" id="caBinningY">
+                                <span class="input-group-text hideOnSym" id="caBinningTxt">X</span>
+                                <select title="ipsum" class="form-select text-bg-primary hideOnSym" id="caBinningY">
                                     <option value="1">1</option>
                                     <option value="2">2</option>
                                     <option value="3">3</option>
@@ -154,11 +154,11 @@
                         
                         <div class="row flex-nowrap input-group justify-content-between align-items-center">
                             <div class="col-8 d-flex">
-                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="23" id="caExposureHrs">
+                                <input type="number" class="form-control flex-fill caExposureTime" placeholder="--" min="0" max="23" id="caExposureHrs">
                                 <span class="input-group-text">H</span>
-                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="59" id="caExposureMins">
+                                <input type="number" class="form-control flex-fill caExposureTime" placeholder="--" min="0" max="59" id="caExposureMins">
                                 <span class="input-group-text">M</span>
-                                <input type="number" class="form-control flex-fill" placeholder="--" min="0" max="59" id="caExposureSecs">
+                                <input type="number" class="form-control flex-fill caExposureTime" placeholder="--" min="0" max="59" id="caExposureSecs">
                                 <span class="input-group-text">S</span>
                             </div>
                             <div class="col">
@@ -217,22 +217,28 @@
                         <!-- Current state display -->
                         <div class="row flex-nowrap justify-content-between my-1">
                             <div class="d-flex justify-content-center text-center">
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateOff">Off</div>
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateWup">Warmup</div>
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateStb">Stable</div>
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateAct">Active</div>
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateCdn">Cooldown</div>
-                                <div class="border border-primary text-bg-dark col-2" id="caCoolerStateSat">Saturated</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateOff">Off</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateWup">Warmup</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateStb">Stable</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateAct">Active</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateCdn">Cooldown</div>
+                                <div class="border border-primary text-bg-dark col-2 caCoolerStateIndicator" id="caCoolerStateSat">Saturated</div>
                             </div>
                         </div>
 
                         <!-- Cooler temp settings -->
                         <div class="row flex-nowrap justify-content-between my-1" id="caCoolerTempSetPane">           
-                                <div class="col-8">
-                                    <label for="caCoolerTarget" class="form-label">Set target temp</label>
-                                    <input type="range" class="form-range" min="-30.0" max="30.0" step="0.5" value="0" id="caCoolerTarget">
+                                <div class="d-flex flex-row justify-content-between align-items-center col-8">
+                                    <div class="col-8">
+                                        <label for="caCoolerTarget" class="form-label">Set target temp</label>
+                                        <input type="range" class="form-range" min="-30.0" max="30.0" step="0.5" value="0" id="caCoolerTarget">
+                                    </div>                                   
+                                    <div class="d-flex flex-row justify-content-between col-3">
+                                        <span class="form-control" id="caCoolerTgtDisp">0.0</span>
+                                        <span class="input-group-text">°C</span>
+                                    </div>
                                 </div>
-                                <div class="d-flex flex-row justify-content-between align-items-center col-4">
+                                <div class="d-flex flex-row justify-content-between align-items-center col-4">   
                                     <button type="button" class="btn btn-primary col-5 text-nowrap" id="caCoolerTargetSet" disabled>Set</button>
                                     <button type="button" class="btn btn-primary col-5 text-nowrap" id="caCoolerTargetEase" disabled>Ease</button>
                                 </div> 
