ref(health1): Telescope upgraded to new system

--- a/src/main/resources/templates/observatory/telescope.html
+++ b/src/main/resources/templates/observatory/telescope.html
@@ -224,6 +224,9 @@
 
 
     <th:block th:replace="~{fragments/controlpanel.html :: bottomDefs}"/>
+    <script th:inline="javascript">
+        var capabilities = /*[[${capabilities}]]*/ null;
+    </script>
     <script src="/js/telescope.js"></script>
 </body>
 
