ref(automation): fixed lots of buggy code, now it can start programs

--- a/src/main/resources/templates/fragments/controlpanel.html
+++ b/src/main/resources/templates/fragments/controlpanel.html
@@ -47,6 +47,9 @@
                         <a class="nav-link" href="/altair/observatory/dashboard" th:classappend="${activeLink == 'dashboard'} ? 'active' : ''">Dashboard</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/altair/observatory/governor" th:classappend="${activeLink == 'governor'} ? 'active' : ''">Governor</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/altair/observatory/telescope" th:classappend="${activeLink == 'telescope'} ? 'active' : ''">Telescope</a>
                     </li>
                     <li class="nav-item">
