--- a/src/main/resources/templates/observatory/dashboard.html
+++ b/src/main/resources/templates/observatory/dashboard.html
@@ -132,6 +132,8 @@
                                     Binning: <br>
                                     Subframe: <br>
                                     Cooler: <br>
+                                    Filter: <br>
+                                    Filter offset: <br>
                                 </p>
                             </div>
                             <div class="col">
@@ -142,12 +144,96 @@
                                     <span id="caBinning">???</span><br>
                                     <span id="caSubframe">???</span><br>
                                     <span id="caCooler">???</span><br>
+                                    <span id="fwCurrentName">???</span><br>
+                                    <span id="fwCurrentOff">???</span> steps<br>
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <!-- WeatherWatch status -->
+            <div class="col mx-auto">
+                <div class="card h-100 text-bg-primary" style="max-width: 32rem; min-width: 15rem">
+                    <div class="card-header"><h5 class="card-title">Weather</h5></div>
+                    <div class="card-body text-bg-light">
+                        <div class="row flex-nowrap">
+                            <div class="col-auto">
+                                <p class="card-text">
+                                    Connected: <br>
+                                    Safe?: <br>
+                                    Cloud cover: <br>
+                                    Humidity: <br>
+                                    Pressure: <br>
+                                    Rain rate: <br>
+                                    Sky brightness: <br>
+                                    Sky quality: <br>
+                                    Sky temperature: <br>
+                                    Ambient temperature: <br>
+                                    Wind speed: <br>
+                                    Wind gusts: <br>
+                                    Wind direction: <br>
+                                </p>
+                            </div>
+                            <div class="col">
+                                <p class="card-text">
+                                    <span id="wwConnected">???</span><br>
+                                    <span id="wwIsSafe">???</span><br>
+                                    <span id="wwCloudCover">???</span><br>
+                                    <span id="wwHumidity">???</span><br>
+                                    <span id="wwPressure">???</span><br>
+                                    <span id="wwRainRate">???</span><br>
+                                    <span id="wwSkyBrightness">???</span><br>
+                                    <span id="wwSkyQuality">???</span><br>
+                                    <span id="wwTempSky">???</span><br>
+                                    <span id="wwTempAmbient">???</span><br>
+                                    <span id="wwWindSpeed">???</span><br>
+                                    <span id="wwWindGust">???</span><br>
+                                    <span id="wwWindDirection">???</span><br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Governor status -->
+            <div class="col mx-auto">
+                <div class="card h-100 text-bg-primary" style="max-width: 32rem; min-width: 15rem">
+                    <div class="card-header"><h5 class="card-title">Governor</h5></div>
+                    <div class="card-body text-bg-light">
+                        <div class="row flex-nowrap">
+                            <div class="col-auto">
+                                <p class="card-text">
+                                    State: <br>
+                                    Safe?: <br>
+                                    Safe override: <br>
+                                    Current order: <br>
+                                    Current user: <br>
+                                    Remaining time: <br>
+                                    Next night: <br>
+                                    Altair slewing: <br>
+                                </p>
+                            </div>
+                            <div class="col">
+                                <p class="card-text">
+                                    <span id="gvState">???</span><br>
+                                    <span id="gvSafe">???</span><br>
+                                    <span id="gvSafeOvr">???</span><br>
+                                    <span id="gvCurrOrder">???</span><br>
+                                    <span id="gvCurrUser">???</span><br>
+                                    <span id="gvRemainingTime">???</span><br>
+                                    <span id="gvNextNight">???</span><br>
+                                    <span id="gvSlaving">???</span><br>
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
 
         </div>      
     </main>
